spelling: "lightning" -> "lighting"
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@541 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/src/pycam/Gui/gtk-interface/pycam-project.ui
+++ b/src/pycam/Gui/gtk-interface/pycam-project.ui
@@ -5286,7 +5286,7 @@ It is significantly faster, but the current release of ODE contains a nasty bug 
                         </child>
                         <child>
                           <object class="GtkCheckButton" id="OpenGLLight">
-                            <property name="label" translatable="yes">Lightning</property>
+                            <property name="label" translatable="yes">Lighting</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
