use "Open Model" instead of "Load Model"
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@555 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/src/pycam/Gui/gtk-interface/pycam-project.ui
+++ b/src/pycam/Gui/gtk-interface/pycam-project.ui
@@ -4635,8 +4635,8 @@ upon interesting bugs and weird results.</property>
     <property name="step_increment">1</property>
   </object>
   <object class="GtkAction" id="LoadModel">
-    <property name="label">_Load Model</property>
-    <property name="tooltip">Loads an STL model file.</property>
+    <property name="label">_Open Model</property>
+    <property name="tooltip">Opens a model file.</property>
     <property name="stock_id">gtk-open</property>
     <property name="always_show_image">True</property>
   </object>
